# HuertoBot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32-c3-devkitm-1  sdkconfig.esp32-c3-devkitm-1.old
Course/03 - Project setup/: workflow-definition.md
Course/04 - I2C + BME280/: BME280.md  bme280-wiring.fzz  bmi280-wiring.fzz
Course/07 - ADC ADS1115/: ADS1115.md  bme280-ads1115-wiring.fzz
include/: comms.h  ibme280.h  pump.h  scanneri2c.h  sensors.h  system.h
lib/ads1115/: ads1115.c  ads1115.h  ads115_regs.h
lib/ads1115/hal/: ads1115_hEsp32.c  ads1115_hals.h  ads115_hEsp32.c
main/: CMakeLists.txt  comms.c  ibme280.c  main.c  sensors.c
src/: main.c  pump.c  scanneri2c.c  sensors.c  system.c
